# stryke-azure

./: .gitignore  Cargo.toml  Makefile  README.md  stryke.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
examples/: blob_browse.stk  discover.stk
lib/: Azure.stk  Blob.stk  Compute.stk  Containers.stk  Cosmos.stk  Keys.stk  Monitor.stk  Queue.stk  ResourceGroups.stk  Secrets.stk  ServiceBus.stk  Storage.stk  Subscriptions.stk
src/: lib.rs
t/: test_azure.stk  test_azure_surface.stk  test_stryke_azure_surface.stk
