[package]
name = "stryke-azure"
version = "0.17.0"
edition = "2021"
description = "Azure SDK cdylib for the stryke `azure` package — dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-azure"
homepage = "https://menketechnologies.github.io/stryke-azure/"
publish = false

[lib]
name = "stryke_azure"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
azure_core = "1"
azure_identity = "1"
azure_storage_blob = "1"
azure_storage_queue = "1"
# Cosmos has not reached GA; Cargo.lock pins the exact preview build for reproducibility.
azure_data_cosmos = "0.35.0"
azure_security_keyvault_secrets = "1"
azure_security_keyvault_keys = "1"
url = "2"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
base64 = "0.22"
once_cell = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
